<?xml version="1.0"?>
<package format="2">
  <name>ros_cozmo</name>
  <version>0.0.0</version>
  <description>The ros_cozmo package</description>
  <maintainer email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</maintainer>
  <license>MIT</license>

  <author email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>

  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>actionlib_msgs</build_export_depend>

  <exec_depend>message_runtime</exec_depend>

</package>
